# Reynolds-Engine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  a.md  progress.md
build_files/: build-all-manual.bat  build-all.bat  build.bat
docs/adr/: 0001-synchronous-event-dispatch.md  0002-event-consumption-input-only.md  0003-layer-stack-stored-by-value.md  0004-glfw-platform-boundary.md  0005-audio-via-miniaudio.md  0006-input-polling-events-internal.md  0007-tagged-union-event.md  README.md
engine/include/: OrthoCameraController.h  OrthographicCamera.h  audio.h  defines.h  engine.h  entry.h  event_include.h  input.h  keycodes.h  layers.h  logging.h  renderer.h  shader.h  subTexture.h  text.h  texture.h  timestep.h  ui.h  vector_include.h  window.h
engine/include/Camera/: OrthoCameraController.h  OrthographicCamera.h  camera.h
engine/include/utils/: vector.h
engine/src/: OrthoCameraController.c  OrthoCameraController.h  OrthoCameraControllerInternals.h  engine.c  engine.h  entry.c  entry.h  entry_internals.h  ui.c
engine/src/audio/: audio.c
engine/src/core/: defines.h  glx.h  input.c  input.h  layers.c  layers.h  layers_internals.h  logging.c  logging.h  timestep.c  timestep.h  window.c  window.h  window_internals.h
engine/src/events/: event.c  (+7 more)
testbed/: build.bat
testbed/src/: Makefile  app_input.c  app_input.h  board.c  board.h  common.h  debug_layer.c  debug_layer.h  display.c  display.h  file_handling.c  file_handling.h  game_logic.c  game_logic.h  gameplay_layer.c  gameplay_layer.h  gamestate.h  testbed.c  ui_layer.c  ui_layer.h
(+28 files in other folders)
